--- a/index.html
+++ b/index.html
@@ -386,13 +386,26 @@
 
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experience</h2>
+                                  <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Research Assistant</h3>
+                            <div class="time">June.2022 - Present</div>
+                        </div><!--//upper-row-->
+                       <div class="company"><a class="text-info"><strong>UiT The Arctic University of Norway</strong></a>, Narvik , Norway
+
+                        </div>
+
+
+                    </div>
+                  </div>
                       <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Research Assistant</h3>
                             <div class="time">Oct.2020 - Jan.2021</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> University of Guilan</strong></a>, Rasht, Iran
+                        <div class="company"><a class="text-info"><strong> University of Guilan</strong></a>, Rasht, Iran
                 <br>
                             <span style="margin-right: 3px" class="badge badge-secondary">python</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">tensorflow</span>
@@ -507,13 +520,13 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
 
                     <div class="item">
                         <h3 class="level-title">Python</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
+<!--                        <div class="progress level-bar">-->
+<!--						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--						</div>-->
                         <span style="margin-right: 3px" class="badge badge-secondary">Django</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">Tensorflow</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">Keras</span>
-                        <span style="margin-right: 3px" class="badge badge-secondary">nltk</span>
+<!--                        <span style="margin-right: 3px" class="badge badge-secondary">nltk</span>-->
                         <span style="margin-right: 3px" class="badge badge-secondary">matplotplib</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">openCV</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">Numpy</span>
@@ -522,33 +535,22 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
 
                      <div class="item">
                         <h3 class="level-title">Web Development Tools</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
+<!--                        <div class="progress level-bar">-->
+<!--						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--						</div>-->
                           <span style="margin-right: 3px" class="badge badge-secondary">HTML</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">CSS</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">Bootstrap</span>
-                          <span style="margin-right: 3px" class="badge badge-secondary">javascript</span>
-                          <span style="margin-right: 3px" class="badge badge-secondary">JQuery</span>
+<!--                          <span style="margin-right: 3px" class="badge badge-secondary">javascript</span>-->
+<!--                          <span style="margin-right: 3px" class="badge badge-secondary">JQuery</span>-->
                     </div>
-                    <div class="item">
-                        <h3 class="level-title">Java</h3>
-                        <div class="progress level-bar">
-                    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                           <span style="margin-right: 3px" class="badge badge-secondary">Android</span>
-                        <span style="margin-right: 3px" class="badge badge-secondary">Java Cup</span>
-                        <span style="margin-right: 3px" class="badge badge-secondary">Java Swing</span>
-                        <span style="margin-right: 3px" class="badge badge-secondary">JUnit</span>
 
-
-                    </div>
 
                     <div class="item">
                         <h3 class="level-title">Database Tools</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
+<!--                        <div class="progress level-bar">-->
+<!--						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--						</div>-->
                          <span style="margin-right: 3px" class="badge badge-secondary">sqlite3</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">MySQL</span>
                     </div>
@@ -556,33 +558,52 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
 
                     <!--//item-->
                     <!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">VHDL</h3>
-                        <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-                    </div><!--//item-->
+<!--                    <div class="item">-->
+<!--                        <h3 class="level-title">VHDL</h3>-->
+<!--                        <div class="progress level-bar">-->
+<!--                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--            </div>-->
+<!--                    </div>&lt;!&ndash;//item&ndash;&gt;-->
 
-                    <div class="item">
-                        <h3 class="level-title">Prolog</h3>
-                        <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+<!--                    <div class="item">-->
+<!--                        <h3 class="level-title">Prolog</h3>-->
+<!--                        <div class="progress level-bar">-->
+<!--                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--            </div>-->
+<!--                    </div>-->
+
+
+<!--                    <div class="item">-->
+<!--                        <h3 class="level-title">Assembly</h3>-->
+<!--                        <div class="progress level-bar">-->
+<!--                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--            </div>-->
+<!--                    </div>-->
+     <div class="item">
+                        <h3 class="level-title">C++</h3>
+<!--                        <div class="progress level-bar">-->
+<!--                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>-->
+                            <span style="margin-right: 3px" class="badge badge-secondary">OpenGL</span>
+
+<!--            </div>-->
                     </div>
+<!--                          <div class="item">-->
+<!--                        <h3 class="level-title">R</h3>-->
+<!--                        <div class="progress level-bar">-->
+<!--                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--            </div>-->
+<!--                    </div>-->
+                           <div class="item">
+                        <h3 class="level-title">Java</h3>
+<!--                        <div class="progress level-bar">-->
+<!--                    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--                    </div>-->
+<!--                           <span style="margin-right: 3px" class="badge badge-secondary">Android</span>-->
+<!--                        <span style="margin-right: 3px" class="badge badge-secondary">Java Cup</span>-->
+<!--                        <span style="margin-right: 3px" class="badge badge-secondary">Java Swing</span>-->
+<!--                        <span style="margin-right: 3px" class="badge badge-secondary">JUnit</span>-->
 
 
-                    <div class="item">
-                        <h3 class="level-title">Assembly</h3>
-                        <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-                    </div>
-
-                          <div class="item">
-                        <h3 class="level-title">R</h3>
-                        <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
                     </div>
 
                 </div>
