--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
      <li class="job-title">Cognitive Science</li>
                  <li class="job-title">Intelligent Software Systems</li>
                 <li class="job-title">Computer Vision and Pattern Recognition</li>
-                <li class="job-title">Natural Languages Processing</li>
-             <li class="job-title">Human-Computer Interaction</li>
-                <li class="job-title">Information and Database Systems</li>
+<!--                <li class="job-title">Natural Languages Processing</li>-->
+<!--             <li class="job-title">Human-Computer Interaction</li>-->
+<!--                <li class="job-title">Information and Database Systems</li>-->
 
 
 
