--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Research Assistant</h3>
-                            <div class="time">June.2022 - Present</div>
+                            <div class="time">June.2022 - July.2022</div>
                         </div><!--//upper-row-->
                        <div class="company"><a class="text-info"><strong>UiT The Arctic University of Norway</strong></a>, Narvik , Norway
 
