--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
                 </div>
 <br><br>
             </section><!--//skills-section-->
-    <section class="section experiences-section">
+<!--     <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-address-book"></i></span>Referee</h2>
                 <div class="item">
                     <div class="meta">
@@ -643,7 +643,7 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
                   </div>
 
 
-            </section>
+            </section> -->
         </div><!--//main-body-->
     </div>
 
