--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <!--//item-->
 
           </section><!--//section-->
- <section class="section experiences-section">
+<!--  <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-book-open"></i></span>Relevant Courses</h2>
 <ul>
 
@@ -171,7 +171,7 @@
 
 
           <!--//item-->
-          </section>
+          </section> -->
 
           <!--//item-->
           <section class="section experiences-section">
@@ -616,7 +616,7 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
                         <div class="upper-row">
                             <h3 class="job-title">Dr. Seyed Abolghasem Mirroshandel</h3>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
+<!--                         <div class="company"><a class="text-info"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
                         <ul>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mirroshandel@guilan.ac.ir">   mirroshandel@guilan.ac.ir</a></li>
@@ -632,7 +632,7 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
                         <div class="upper-row">
                             <h3 class="job-title">Dr. Seyed Mohammad Hossein Shekarian </h3>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
+<!--                         <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
                         <ul>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shekarian@guilan.ac.ir">   shekarian@guilan.ac.ir</a></li>
@@ -640,10 +640,10 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
                         </ul>
 
                     </div>
-                  </div>
+                  </div> -->
 
 
-            </section> -->
+<!--             </section> --> --> -->
         </div><!--//main-body-->
     </div>
 
