--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ Analyzing a dataset consisting of different types of Persian rice and the goal o
                   </div> -->
 
 
-<!--             </section> --> --> -->
+<!--             </section> --> 
         </div><!--//main-body-->
     </div>
 
