--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
           <!--//item-->
-          </section> -->
+          </section>
 
           <!--//item-->
           <section class="section experiences-section">
