--- a/index.html
+++ b/index.html
@@ -80,7 +80,23 @@
                       <div class="company"><strong>UiT The Arctic University of Norway</strong> , Norway
 <br>
 
+<br>
+<h3 class="job-title">Master Thesis</h3>
+<div class="company"><a class="text-info" ><strong> Clustering of clinical multivariate time-series utilizing recent advances in
+machine-learning</strong></a>
+                <br>
 
+
+
+                            <span style="margin-right: 3px" class="badge badge-secondary">python</span>
+                          <span style="margin-right: 3px" class="badge badge-secondary">Git</span>
+ </div>
+                          <ul>
+                              <li class="text-info"><strong>Thesis Grade: B </strong></li>
+                              <li>The purpose of this thesis was to set the groundwork for future research on developing
+a machine-learning based anomaly detection system for hospitalized patients. The thesis began with an analysis of the National Early Warning Score and identified the need for an updated system. Nordlandssykehuset presented us with two datasets to explore the possibility of creating an anomaly detection system using unsupervised learning on patient physiological registrations. A non-temporal dimension and the viability of training clustering models on physiological data are examined throughout the thesis. With 29000 records trained using various algorithms and four distance metrics, we evaluated each model’s viability and practicality, then selected the most effective one and discussed its results.</li>
+
+                          </ul>
 
 
 </div>
@@ -97,7 +113,7 @@
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Iran
 <br>
-<ul><li class="text-info"><strong>CGPA :16.69/20 </strong></li> <li class="text-info"><strong>Last Year GPA :17.24/20 </strong></li> </ul>
+<ul><li class="text-info"><strong>CGPA: 16.69/20 </strong></li> <li class="text-info"><strong>Last Year GPA: 17.24/20 </strong></li> </ul>
 <h3 class="job-title">Bachelors Thesis Project</h3>
 <div class="company"><a class="text-info" ><strong> ALPR Plate Recognition and Supervision Website</strong></a>
                 <br>
@@ -113,7 +129,7 @@
                           <span style="margin-right: 3px" class="badge badge-secondary">JQuery</span>
  </div>
                           <ul>
-                              <li class="text-info"><strong>Thesis Grade :19.75/20 </strong></li>
+                              <li class="text-info"><strong>Thesis Grade: 19.75/20 </strong></li>
                               <li>Implemented a Supervision Website for a Plate Detector
                                   System which is
                                   currently used in many universities in <strong>Guilan Province</strong> including
@@ -138,7 +154,7 @@
                       </div><!--//upper-row-->
                       <div class="company"><strong>Professor Reza Highschool</strong> , Rasht , Iran
                         <br>
-                        <ul><li class="text-info"><strong>GPA :19.71/20</strong> </li></ul>
+                        <ul><li class="text-info"><strong>GPA: 19.71/20</strong> </li></ul>
 
 </div>
                   </div><!--//meta-->
