--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ a machine-learning based anomaly detection system for hospitalized patients. The
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Member and The Lead singer of <em class="text-info">Recitatif</em> music band</h3>
+                            <h3 class="job-title">Member of <em class="text-info">Recitatif</em> music band</h3>
                             <div class="time">Mar.2019 - Mar.2020</div>
                         </div><!--//upper-row-->
                         <div class="company"><span class="text-info">Shaghayegh music academy</span>, Rasht , Iran</div>
